mudancas no codigo

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <p>Nos meus momentos livres, gosto de programar, jogar videogames, praticar musculação e cozinhar.</p>
                     <div class="languages">
                         <h3>Idiomas</h3>
-                        <p>Português: Fluente</p>
-                        <p>Inglês: Básico</p>
+                        <p>Português: Nativo</p>
+                        <p>Inglês: Avançado</p>
                     </div>
                 </div>
             </div>
@@ -234,31 +234,17 @@
                         </div>
                     </div>
                 </div>
-            <div class="contact-form">
-                <form id="contact-form">
-                    <div class="form-group">
-                        <input type="text" id="name" name="name" placeholder="Seu Nome" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" id="email" name="email" placeholder="Seu Email" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" id="subject" name="subject" placeholder="Assunto" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea id="message" name="message" placeholder="Sua Mensagem" required></textarea>
-                    </div>
-                    <button type="submit" id="submit-btn" class="btn">
-                        <span id="btn-text">Enviar Mensagem</span>
-                        <div id="btn-loading" class="btn-loading" style="display: none;">
-                            <i class="fas fa-spinner fa-spin"></i> Enviando...
+                <div class="contact-item">
+                        <div class="contact-icon">
+                            <i class="fas fa-map-marker-alt"></i>
                         </div>
-                    </button>
-                    
-                    <div id="form-message" class="form-message"></div>
-                </form>
+                        <div>
+                            <h4>Email</h4>
+                            <p>vinicaruccio98@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
     </section>
 
     <!-- Footer -->
