novas mudancas no estilo do site para melhorar a experiencia do usuario.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="about-content">
                 <div class="about-img">
                     <!-- Imagem placeholder - substitua pela sua foto -->
-                    <img src="images/lime.png" alt="Vinicius Caruccio">
+                    <img src="images/limer.png" alt="Vinicius Caruccio">
                 </div>
                 <div class="about-text">
                     <p>Sou estudante de TI na Fundação Escola Técnica Liberato Salzano Vieira da Cunha, atualmente no 4º semestre do curso técnico. Possuo facilidade em aprender novos métodos e trabalhar em equipe para elevar meus conhecimentos.</p>
