--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@
             <h2 class="section-title">Experiência Profissional</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-date">Setembro 2025 - Atualmente</div>
+                    <div class="timeline-date"><h2>Setembro 2025 - Atualmente</h2></div>
                     <div class="timeline-content">
-                        <h3>Estagiário no Setor de Informática</h3>
+                        <h4>Estagiário no Setor de Informática</h4>
                         <h4>Fundacao Escola Tecnica Liberato Salzano Vieira da Cunha</h4>
                         <p>Atuando no suporte técnico, manutenção de equipamentos e sistemas.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-date">Setembro 2024</div>
+                    <div class="timeline-date"><h2>Setembro 2024</h2></div>
                     <div class="timeline-content">
-                        <h3>Vendedor</h3>
+                        <h4>Vendedor</h4>
                         <h4>Clip, Ivoti</h4>
                         <p>Atendimento ao cliente e vendas.</p>
                     </div>
@@ -233,8 +233,7 @@
                             <p>Ivoti, RS - Rua 7, 17, Bairro Jardim Panorâmico</p>
                         </div>
                     </div>
-                </div>
-                <div class="contact-item">
+                    <div class="contact-item">
                         <div class="contact-icon">
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
@@ -245,6 +244,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- Footer -->
