--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="container">
+        <div class="container1">
             <h1>Olá, eu sou Vinicius Caruccio</h1>
             <p>Estudante de TI com habilidades em desenvolvimento web, Java, C# .NET e assistência técnica.</p>
             <div class="hero-btns">
