--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- Habilidades -->
     <section id="skills" class="skills">
-        <div class="container">
+        <div class="container2">
             <h2 class="section-title">Minhas Habilidades</h2>
             <div class="skills-container">
                 <div class="skill-card">
