--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <span class="tech-tag">JSP</span>
                             <span class="tech-tag">Oracle SQL</span>
                         </div>
-                        <a href="https://github.com/ViniLmao/Java-JSP-Liberato" class="btn">Ver Detalhes</a>
+                        <a href="https://github.com/ViniLmao/Java-JSP-Liberato" target="_blank" class="btn">Ver Detalhes</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -186,7 +186,7 @@
                             <span class="tech-tag">.NET</span>
                             <span class="tech-tag">SQLite</span>
                         </div>
-                        <a href="https://github.com/ViniLmao/Liberato-" class="btn">Ver Detalhes</a>
+                        <a href="https://github.com/ViniLmao/Liberato-" target="_blank" class="btn">Ver Detalhes</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -200,7 +200,7 @@
                             <span class="tech-tag">Java</span>
                             <span class="tech-tag">Mobile</span>
                         </div>
-                        <a href="https://github.com/ViniLmao/Java-Mobile-Liberato" class="btn">Ver Detalhes</a>
+                        <a href="https://github.com/ViniLmao/Java-Mobile-Liberato" target="_blank" class="btn">Ver Detalhes</a>
                     </div>
                 </div>
             </div>
